Changed Assets added Crafting blueprints

--- a/Devilguard/Devilguard.csproj
+++ b/Devilguard/Devilguard.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Actor_Type.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GUI.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
