--- a/Devilguard/Devilguard.csproj
+++ b/Devilguard/Devilguard.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Actor_Type.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GUI.cs" />
+    <Compile Include="InformationDictionary.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
